[tool.poetry]
name = "Echo"
version = "3.4.1.1"
description = "A collection of discord bots for moderation, reference sheet management, and scam prevention."
authors = ["Autumn <@Autumna1Equin0x>"]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
